tests/anp_test_1_deny_traffic_at_cluster_level/deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo-ns-1
spec: {}
---

apiVersion: v1
kind: Namespace
metadata:
  name: foo-ns-2
spec: {}
---

apiVersion: v1
kind: Namespace
metadata:
  name: bar-ns
spec: {}
---

apiVersion: v1
kind: Namespace
metadata:
  name: sensitive-ns
spec: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo-ns-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: netpol/example1
        args:
        - -name
        - foo
        - -port
        - "5698"
        ports:
        - name: http
          containerPort: 5698
          protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo-ns-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: foo
        image: netpol/example1
        args:
        - -name
        - foo
        - -port
        - "5698"
        ports:
        - name: http
          containerPort: 5698
          protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: bar-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: netpol/example1
        args:
        - -name
        - bar
        - -port
        - "8956"
        ports:
        - name: http
          containerPort: 8956
          protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensitive
  namespace: sensitive-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensitive
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: sensitive
        image: netpol/example1
        args:
        - -name
        - sensitive
        - -port
        - "8956"
        ports:
        - name: http
          containerPort: 8956
          protocol: TCP
---
